--- a/views/admin/register.pug
+++ b/views/admin/register.pug
@@ -1,19 +1,16 @@
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Register 
-    body 
-        h1 Registration Form 
-        form(action="/admin/register" method="POST")
-            .form-element
-                label(for="user") Username: 
-                input(type="text" id="user" name="user")
-            .form-element
-                label(for="pass") Password: 
-                input(type="password" id="pass" name="pass")
-            .form-element
-                button(type="submit" class="btn btn-primary") Register
-            p. 
-                Already have an account? #[a(href="/admin/login") Login now]
+extends ../common/layout 
+
+block layout-content
+    h1 Registration Form 
+    form(action="/admin/register" method="POST" class="form-element")
+        .form-element
+            label(for="user") Username: 
+            input(type="text" id="user" name="user" placeholder="Enter the username")
+        .form-element
+            label(for="pass") Password: 
+            input(type="password" id="pass" name="pass" placeholder="Enter the password")
+        .form-element
+            button(type="submit" class="add-btn") Register
+        p
+            | Already have an account? 
+            a(href="/admin/login") Login now
