--- a/views/admin/login.pug
+++ b/views/admin/login.pug
@@ -1,19 +1,15 @@
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Login Page
-    body 
-        h1 Login Page 
-        form(action="/admin/login" method="POST")
-            .form-element
-                label(for="user") Username: 
-                input(type="text" id="user" name="user")
-            .form-element
-                label(for="pass") Password: 
-                input(type="password" id="pass" name="pass")
-            .form-element
-                button(type="submit" class="btn btn-primary") Login
-            p. 
-                Don't have an account? #[a(href="/admin/register") Register now]
+extends ../common/layout 
+
+block layout-content 
+    h2 Login Page 
+    form(action="/admin/login" method="POST" class="form-element")
+        .form-element
+            label(for="user") Username: 
+            input(type="text" id="user" name="user" placeholder="Enter your username")
+        .form-element
+            label(for="pass") Password: 
+            input(type="password" id="pass" name="pass" placeholder="Enter your password")
+        button(type="submit" class="add-btn") Login
+    p 
+        | Don't have an account? 
+        a(href="/admin/register") Register now
